--- a/src/ExtFig2g.ipynb
+++ b/src/ExtFig2g.ipynb
@@ -8,24 +8,24 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import yaml\n",
-    "\n",
     "import re\n",
     "import glob\n",
-    "\n",
-    "from math import ceil\n",
+    "import yaml\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "from math import ceil\n",
+    "\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import tifffile\n",
-    "from lazy_ops import DatasetView\n",
+    "\n",
+    "import zarr\n",
     "import napari\n",
-    "import dask.array as da\n",
-    "import zarr"
+    "import dask.array as da"
    ]
   },
   {
@@ -102,13 +102,13 @@
    "source": [
     "sample_name = 'WD-76845-097'\n",
     "\n",
-    "tif_path = '../input/Dataset2(CRC)/tif/WD-76845-097.ome.tif'\n",
-    "seg_path = '../input/Dataset2(CRC)/seg/WD-76845-097.ome.tif'\n",
-    "sc_data_path = '../input/Dataset2(CRC)/CRC-097_raw_cylinter_clustering.parquet'\n",
-    "for_channels_path = '../input/Dataset2(CRC)/CRC-097_clean_consensus_clustering.parquet'\n",
-    "cylinter_config_path = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_config.yml'\n",
-    "markers_path = '../input/Dataset2(CRC)/markers.csv'\n",
-    "image_contrast_path = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_contrast_limits.yml'\n",
+    "tif_path = '../datasets/Dataset2(CRC)/tif/WD-76845-097.ome.tif'\n",
+    "seg_path = '../datasets/Dataset2(CRC)/seg/WD-76845-097.ome.tif'\n",
+    "sc_data_path = '../datasets/Dataset2(CRC)/CRC-097_cylinter_raw_clustering.parquet'\n",
+    "for_channels_path = '../datasets/Dataset2(CRC)/CRC-097_cylinter_cleaned_consensusClustering.parquet'\n",
+    "cylinter_config_path = '../datasets/Dataset2(CRC)/CRC-097_cylinter_config.yml'\n",
+    "image_contrast_path = '../datasets/Dataset2(CRC)/CRC-097_cylinter_contrast_limits.yml'\n",
+    "markers_path = '../datasets/Dataset2(CRC)/markers.csv'\n",
     "\n",
     "# import single-cell data\n",
     "data = pd.read_parquet(sc_data_path)\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "372c0531-ba6f-47e0-af8d-b2ec723abefa",
    "metadata": {},
    "outputs": [],
