--- a/src/ExtFig3b.ipynb
+++ b/src/ExtFig3b.ipynb
@@ -8,8 +8,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Patch\n",
     "import matplotlib.colors as mcolors"
@@ -39,7 +41,7 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "df = pd.read_parquet('../input/Dataset1(TOPACIO)/TOPACIO_raw_cylinter_clustering.parquet')\n",
+    "df = pd.read_parquet('../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_raw_clustering.parquet')\n",
     "df = df[df['cluster_2d'] != -1]\n",
     "\n",
     "mydict = {}\n",
@@ -1031,7 +1033,7 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "df = pd.read_parquet('../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_clustering.parquet')\n",
+    "df = pd.read_parquet('../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_cleaned_clustering.parquet')\n",
     "df = df[df['cluster_2d'] != -1]\n",
     "\n",
     "mydict = {}\n",
