--- a/src/Fig1i.ipynb
+++ b/src/Fig1i.ipynb
@@ -8,13 +8,17 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
     "import matplotlib.patches as patches\n",
+    "\n",
     "from tifffile import imread\n",
+    "\n",
     "from skimage.util import img_as_float\n",
     "from skimage.color import gray2rgb"
    ]
@@ -51,7 +55,7 @@
    "outputs": [],
    "source": [
     "# read unfiltered single-cell data\n",
-    "data = pd.read_parquet('../input/Dataset3(TMA)/TMA_clean_cylinter_aggregateData.parquet')"
+    "data = pd.read_parquet('../datasets/Dataset3(TMA)/TMA_cylinter_cleaned_aggregateData.parquet')"
    ]
   },
   {
@@ -75,9 +79,9 @@
    "outputs": [],
    "source": [
     "# read DNA1, pCREB, and segmentation outlines of selected core and crop to target size\n",
-    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
-    "pcreb = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=33)\n",
-    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
+    "dna = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
+    "pcreb = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=33)\n",
+    "seg = imread(f'../datasets/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
     "\n",
     "ymin_crop = 0\n",
     "ymax_crop = dna.shape[1]\n",
@@ -93,7 +97,22 @@
     "xmax_zoom = 2295\n",
     "dna_zoom = dna[ymin_zoom:ymax_zoom, xmin_zoom:xmax_zoom]\n",
     "pcreb_zoom = pcreb[ymin_zoom:ymax_zoom, xmin_zoom:xmax_zoom]\n",
-    "seg_zoom = seg[ymin_zoom:ymax_zoom, xmin_zoom:xmax_zoom]"
+    "seg_zoom = seg[ymin_zoom:ymax_zoom, xmin_zoom:xmax_zoom]\n",
+    "\n",
+    "# rescale seg_zoom to float(0-1) and convert to RGB\n",
+    "seg_zoom = img_as_float(seg_zoom)\n",
+    "seg_zoom -= seg_zoom.min()\n",
+    "seg_zoom /= seg_zoom.max()\n",
+    "seg_zoom = gray2rgb(seg_zoom)\n",
+    "seg_zoom = seg_zoom * (0.6, 0.6, 0.6)\n",
+    "\n",
+    "# rescale pcreb_zoom to float(0-1) and convert to RGB\n",
+    "pcreb_zoom = img_as_float(pcreb_zoom)\n",
+    "pcreb_zoom -= pcreb_zoom.min()\n",
+    "pcreb_zoom /= pcreb_zoom.max()\n",
+    "pcreb_zoom = plt.cm.magma(pcreb_zoom) # converts to RGBA automatically\n",
+    "pcreb_zoom = pcreb_zoom[:, :, 0:3]  # drop alpha dimension\n",
+    "pcreb_zoom = pcreb_zoom/1.3  # dim pCREB\n"
    ]
   },
   {
@@ -124,10 +143,8 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f09647ef",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "1d3dc251-4c27-46cd-bb4e-978b38e36583",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -149,22 +166,6 @@
    ],
    "source": [
     "# plot cropped image\n",
-    "\n",
-    "# rescale seg_zoom to float(0-1) and convert to RGB\n",
-    "seg_zoom = img_as_float(seg_zoom)\n",
-    "seg_zoom -= seg_zoom.min()\n",
-    "seg_zoom /= seg_zoom.max()\n",
-    "seg_zoom = gray2rgb(seg_zoom)\n",
-    "seg_zoom = seg_zoom * (0.6, 0.6, 0.6)\n",
-    "\n",
-    "# rescale pcreb_zoom to float(0-1) and convert to RGB\n",
-    "pcreb_zoom = img_as_float(pcreb_zoom)\n",
-    "pcreb_zoom -= pcreb_zoom.min()\n",
-    "pcreb_zoom /= pcreb_zoom.max()\n",
-    "pcreb_zoom = plt.cm.magma(pcreb_zoom) # converts to RGBA automatically\n",
-    "pcreb_zoom = pcreb_zoom[:, :, 0:3]  # drop alpha dimension\n",
-    "\n",
-    "pcreb_zoom = pcreb_zoom/1.3  # dim pCREB\n",
     "seg_zoom += pcreb_zoom\n",
     "\n",
     "plt.imshow(seg_zoom, cmap='magma')\n",
@@ -295,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
