--- a/src/Fig1j-ExtFig1d,e.ipynb
+++ b/src/Fig1j-ExtFig1d,e.ipynb
@@ -10,10 +10,10 @@
     "import os\n",
     "import yaml\n",
     "\n",
-    "import math\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "import math\n",
     "\n",
     "import seaborn as sns\n",
     "from matplotlib import colors\n",
@@ -170,10 +170,10 @@
     "    os.makedirs(out_dir)\n",
     "\n",
     "# read aggregate csv data\n",
-    "agg = pd.read_parquet('../input/Dataset7(CODEX7)/CODEX7_clean_cylinter_aggregateData.parquet')\n",
+    "agg = pd.read_parquet('../datasets/Dataset7(CODEX7)/CODEX7_cylinter_cleaned_aggregateData.parquet')\n",
     "\n",
     "# read markers.csv\n",
-    "markers = pd.read_csv('../input/Dataset7(CODEX7)/markers.csv')\n",
+    "markers = pd.read_csv('../datasets/Dataset7(CODEX7)/markers.csv')\n",
     "\n",
     "# log-transform columns to be used in clustering\n",
     "clustering_cols = [\n",
@@ -201,11 +201,11 @@
     "data_crop['Y_centroid'] = data_crop['Y_centroid'] - row_min\n",
     "\n",
     "# read segmentation outlines and crop\n",
-    "seg = imread('../input/Dataset7(CODEX7)/seg/HBM524.VWGB.378.ome.tif', key=0)\n",
+    "seg = imread('../datasets/Dataset7(CODEX7)/seg/HBM524.VWGB.378.ome.tif', key=0)\n",
     "seg_crop = seg[row_min:row_max, col_min:col_max]\n",
     "\n",
     "# read DNA1 image, crop, and convert to RGB\n",
-    "dna = imread('../input/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', key=0)\n",
+    "dna = imread('../datasets/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', key=0)\n",
     "dna_float = img_as_float(dna)\n",
     "dna_float -= dna_float.min()\n",
     "dna_float /= dna_float.max()\n",
@@ -213,7 +213,7 @@
     "dna_crop_rgb = gray2rgb(dna_crop)\n",
     "\n",
     "# read CD3 channel of image, crop, and convert to RGB with colormap\n",
-    "cd3_raw = imread('../input/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', key=30)\n",
+    "cd3_raw = imread('../datasets/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', key=30)\n",
     "cd3 = np.clip(cd3_raw, cd3_raw.min(), 9169)  # clipping to preferred intensity\n",
     "cd3_float = img_as_float(cd3)\n",
     "cd3_float -= cd3_float.min()\n",
@@ -290,9 +290,9 @@
     ")\n",
     "\n",
     "# read saved polygon vertices (if ROIs have been drawn already) \n",
-    "if os.path.exists(os.path.join(out_dir, 'rois.yml')):\n",
+    "if os.path.exists('../rois/Fig1j-ExtFig1d,e.yml'):\n",
     "\n",
-    "    polygon_dict = yaml.safe_load(open(os.path.join(out_dir, 'rois.yml')))\n",
+    "    polygon_dict = yaml.safe_load(open('../rois/Fig1j-ExtFig1d,e.yml'))\n",
     "    \n",
     "    shapes = [polygon_dict[i][0] for i in range(0, len(polygon_dict.keys()))]\n",
     "    polygons = [polygon_dict[i][1] for i in range(0, len(polygon_dict.keys()))]\n",
@@ -321,13 +321,25 @@
     "        zip(selection_layer.shape_type, selection_layer.data)):\n",
     "    polygon_dict[e] = [shape_type, roi.tolist()]\n",
     "\n",
-    "f = open(os.path.join(out_dir, 'rois.yml'), 'w')\n",
+    "f = open('../rois/Fig1j-ExtFig1d,e.yml', 'w')\n",
     "yaml.dump(polygon_dict, f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "8163f434-f3fc-4cc7-80aa-97cc24ee1472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re-read newly saved polygon dict\n",
+    "if os.path.exists('../rois/Fig1j-ExtFig1d,e.yml'):\n",
+    "    polygon_dict = yaml.safe_load(open('../rois/Fig1j-ExtFig1d,e.yml'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "a42e0a23-93bb-4486-a196-3f59a999a55a",
    "metadata": {},
    "outputs": [],
@@ -371,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "187bda6e-7ff6-4ee3-925b-4ef64939605e",
    "metadata": {},
    "outputs": [
@@ -430,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a1ae8095-267a-4a0d-84ad-99c8795f1679",
    "metadata": {},
    "outputs": [
@@ -508,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "7ee01e6d-d6fc-4a6b-93bd-7828063a7a63",
    "metadata": {},
    "outputs": [
@@ -605,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "44f70689-c545-4dda-8ed5-3bee41b0fc1a",
    "metadata": {},
    "outputs": [
@@ -625,8 +637,8 @@
     "\n",
     "data_sans_rois = data_sans_rois.reset_index(drop=True)\n",
     "\n",
-    "if os.path.exists(os.path.join(out_dir, 'lassoed_cells.yml')):\n",
-    "    my_selections = yaml.safe_load(open(os.path.join(out_dir, 'lassoed_cells.yml')))\n",
+    "if os.path.exists('../rois/Fig1j-ExtFig1d,e_lasso.yml'):\n",
+    "    my_selections = yaml.safe_load(open('../rois/Fig1j-ExtFig1d,e_lasso.yml'))\n",
     "\n",
     "else:\n",
     "    my_selections = {}\n",
@@ -674,7 +686,7 @@
     "        my_selections[pop] = selected_vectors.to_dict(orient='records')\n",
     "\n",
     "    # save dataframes for lassoed cells\n",
-    "    f = open(os.path.join(out_dir, 'lassoed_cells.yml'), 'w')\n",
+    "    f = open('../rois/Fig1j-ExtFig1d,e_lasso.yml', 'w')\n",
     "    yaml.dump(my_selections, f)\n",
     "\n",
     "combo = pd.concat(\n",
@@ -715,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7addd018-e065-4646-92f4-23155366d217",
    "metadata": {},
    "outputs": [],
@@ -737,7 +749,7 @@
     "        channel_number = markers.index[markers['marker_name'] == ch].item()\n",
     "\n",
     "        img = imread(\n",
-    "            '../input/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif',\n",
+    "            '../datasets/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif',\n",
     "            key=channel_number\n",
     "        )\n",
     "        \n",
@@ -799,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
