--- a/src/Fig4h.ipynb
+++ b/src/Fig4h.ipynb
@@ -8,20 +8,28 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "import math\n",
-    "from matplotlib import colors\n",
-    "from matplotlib.colors import ListedColormap\n",
     "from natsort import natsorted\n",
+    "\n",
+    "import seaborn as sns\n",
+    "from matplotlib import colors\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
     "import matplotlib.patches as patches\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
     "from tifffile import imread\n",
-    "from umap import UMAP\n",
+    "\n",
     "import hdbscan\n",
+    "from umap import UMAP\n",
+    "\n",
     "from joblib import Memory\n",
+    "\n",
     "from skimage.util.dtype import img_as_float\n",
     "from skimage.color import gray2rgb"
    ]
@@ -120,7 +128,7 @@
     "    os.makedirs(out_dir)\n",
     "\n",
     "# read raw single-cell data\n",
-    "data = pd.read_csv(f'../input/Dataset3(TMA)/csv/unmicst-{core}_cellMask.csv')"
+    "data = pd.read_csv(f'../datasets/Dataset3(TMA)/csv/unmicst-{core}_cellMask.csv')"
    ]
   },
   {
@@ -137,15 +145,15 @@
     "xmax = 1400\n",
     "\n",
     "# read DNA1 image of selected tissue and crop\n",
-    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
+    "dna = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
     "dna_crop = dna[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# read immunomarker channel of selected tissue and crop\n",
-    "ch = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=5)\n",
+    "ch = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=5)\n",
     "ch_crop = ch[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# read segmentation outlines of selected tissue and crop\n",
-    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
+    "seg = imread(f'../datasets/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
     "seg_crop = seg[ymin:ymax, xmin:xmax]"
    ]
   },
@@ -285,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
