--- a/src/Fig4i.ipynb
+++ b/src/Fig4i.ipynb
@@ -8,13 +8,17 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
     "import matplotlib.patches as patches\n",
+    "\n",
     "from tifffile import imread\n",
+    "\n",
     "from skimage.util.dtype import img_as_float\n",
     "from skimage.color import gray2rgb"
    ]
@@ -57,7 +61,7 @@
     "    os.makedirs(out_dir)\n",
     "\n",
     "data = pd.read_parquet(\n",
-    "    '../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_aggregateData.parquet'\n",
+    "    '../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_cleaned_aggregateData.parquet'\n",
     ")\n",
     "\n",
     "dna = imread(f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/{tissue}.ome.tif', key=0)\n",
@@ -284,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
