--- a/src/Fig4k.ipynb
+++ b/src/Fig4k.ipynb
@@ -9,10 +9,10 @@
    "source": [
     "import os\n",
     "\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
     "import matplotlib.patches as patches\n",
@@ -59,7 +59,7 @@
     "    os.makedirs(out_dir)\n",
     "\n",
     "# read unfiltered single-cell data\n",
-    "data = pd.read_parquet('../input/Dataset3(TMA)/TMA_clean_cylinter_aggregateData.parquet')\n",
+    "data = pd.read_parquet('../datasets/Dataset3(TMA)/TMA_cylinter_cleaned_aggregateData.parquet')\n",
     "data = data[data['Sample'] == core]"
    ]
   },
@@ -88,11 +88,11 @@
     "xmax = 2185\n",
     "\n",
     "# read DNA1 image of selected core and crop to target size\n",
-    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
+    "dna = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
     "dna_crop = dna[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# read segmentation outlines for target core sample and crop ROI\n",
-    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
+    "seg = imread(f'../datasets/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
     "seg_crop = seg[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# plot histogram\n",
@@ -145,8 +145,6 @@
     "dna_crop_rgb = plt.cm.magma(dna_crop) # converts to RGBA automatically\n",
     "dna_crop_rgb = dna_crop_rgb[:, :, 0:3]  # drop alpha dimension\n",
     "\n",
-    "# dna_crop_rgb = gray2rgb(dna_crop)\n",
-    "# dna_crop_rgb *= (0.5, 0.5, 0.5)\n",
     "dna_crop_rgb *= 1.0\n",
     "blank += dna_crop_rgb\n",
     "\n",
@@ -201,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
