--- a/src/Fig4m.ipynb
+++ b/src/Fig4m.ipynb
@@ -8,17 +8,20 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import tifffile\n",
     "from tifffile import imread\n",
     "\n",
     "from skimage.util import img_as_float\n",
     "from skimage.color import gray2rgb\n",
     "\n",
-    "import tifffile\n",
-    "import napari\n",
     "import zarr\n",
+    "import napari\n",
     "import dask.array as da"
    ]
   },
@@ -92,12 +95,12 @@
     "\n",
     "# read TOPACIO single-cell data BEFORE pruning outliers\n",
     "data = pd.read_parquet(\n",
-    "    '../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_selectROIs.parquet'\n",
+    "    '../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_cleaned_selectROIs.parquet'\n",
     ")\n",
     "data = data[data['Sample'] == sample].copy()\n",
     "\n",
     "# isolate immunomarker channels\n",
-    "markers = pd.read_csv('../input/Dataset1(TOPACIO)/markers.csv')\n",
+    "markers = pd.read_csv('../datasets/Dataset1(TOPACIO)/markers.csv')\n",
     "exclude = ['antiRat', 'antiRabbit', 'antiGoat', 'pSTAT1', 'Ki67', 'STING', 'pTBK1', 'pSTAT3', 'PCNA', 'HLAA', 'cPARP']\n",
     "include = [i for i in data.columns if 'DNA' not in i if i not in exclude if i in list(markers['marker_name'])]\n",
     "\n",
@@ -137,7 +140,7 @@
     "fig, ax = plt.subplots(figsize=(3,3.5))\n",
     "for c, d in zip(['k', 'k', 'k'], [other, top, bottom]):\n",
     "    ax.scatter(d[channel], d['Area'], color=c, ec='w', lw=0.0, s=1.0, alpha=1.0)\n",
-    "# ax.axvline(gate, c='tab:red', lw=3.0)\n",
+    "\n",
     "plt.title(f'After pruning')\n",
     "plt.xlabel(f'log10({channel})')\n",
     "plt.ylabel('Segmentation Area')\n",
@@ -214,7 +217,6 @@
     "plt.imshow(blank, cmap='magma')\n",
     "\n",
     "cbar = plt.colorbar()\n",
-    "# cbar = plt.colorbar(format=ticker.FuncFormatter(fmt))\n",
     "cbar.set_alpha(1.0)\n",
     "cbar.set_label(channel, labelpad=20, rotation=270)\n",
     "cbar.draw_all()\n",
@@ -292,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
