--- a/src/Fig5h-j.ipynb
+++ b/src/Fig5h-j.ipynb
@@ -9,11 +9,15 @@
    "source": [
     "import os\n",
     "import glob\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "import tifffile\n",
+    "\n",
     "import napari\n",
     "import zarr\n",
     "import dask.array as da"
@@ -95,8 +99,8 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "pre = pd.read_parquet('../input/Dataset2(CRC)/CRC-097_raw_cylinter_clustering.parquet')\n",
-    "post = pd.read_parquet('../input/Dataset2(CRC)/CRC-097_clean_cylinter_clustering.parquet')\n",
+    "pre = pd.read_parquet('../datasets/Dataset2(CRC)/CRC-097_cylinter_raw_clustering.parquet')\n",
+    "post = pd.read_parquet('../datasets/Dataset2(CRC)/CRC-097_cylinter_cleaned_clustering.parquet')\n",
     "\n",
     "pre = pre[pre['cluster_2d'] != -1]\n",
     "post = post[post['cluster_2d'] != -1]"
@@ -122,8 +126,7 @@
     "    clean_cluster_pad = clean_cluster_percents.reindex(\n",
     "        sorted(post['cluster_2d'].unique())).fillna(0)\n",
     "\n",
-    "    heatmap[name[0]] = clean_cluster_pad\n",
-    "heatmap.to_csv(os.path.join(out_dir, 'heatmap.csv'))"
+    "    heatmap[name[0]] = clean_cluster_pad"
    ]
   },
   {
@@ -213,8 +216,8 @@
     "    s=0.5, c='tab:red'\n",
     ")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
     "plt.savefig(os.path.join(out_dir, 'UMAP1.png'), dpi=800)\n",
+    "plt.show()\n",
     "plt.close('all')"
    ]
   },
@@ -303,13 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9f7e84c2-fcca-4e77-b961-9ddc3407635e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add DNA1 channel to Napari image viewer\n",
-    "dna_path = '../input/Dataset2(CRC)/tif/WD-76845-097.ome.tif'\n",
+    "dna_path = '../datasets/Dataset2(CRC)/tif/WD-76845-097.ome.tif'\n",
     "\n",
     "viewer = napari.Viewer()\n",
     "\n",
@@ -362,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
