--- a/src/Fig5l.ipynb
+++ b/src/Fig5l.ipynb
@@ -8,19 +8,20 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import yaml\n",
-    "\n",
     "import re\n",
     "import glob\n",
+    "import yaml\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import tifffile\n",
+    "\n",
+    "import zarr\n",
     "import napari\n",
-    "import dask.array as da\n",
-    "import zarr"
+    "import dask.array as da"
    ]
   },
   {
@@ -99,13 +100,13 @@
     "\n",
     "clusters_to_show = [13]\n",
     "\n",
-    "cylinter_input_path = '../input/Dataset2(CRC)'\n",
-    "sc_data_path = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_clustering.parquet'\n",
-    "markers_path = '../input/Dataset2(CRC)/markers.csv'\n",
-    "image_contrast_path = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_contrast_limits.yml'\n",
+    "cylinter_input_path = '../datasets/Dataset2(CRC)'\n",
+    "sc_data_path = '../datasets/Dataset2(CRC)/CRC-097_cylinter_cleaned_clustering.parquet'\n",
+    "image_contrast_path = '../datasets/Dataset2(CRC)/CRC-097_cylinter_contrast_limits.yml'\n",
+    "markers_path = '../datasets/Dataset2(CRC)/markers.csv'\n",
     "\n",
-    "tif_path = f'../input/Dataset2(CRC)/tif/{sample_name}.ome.tif'\n",
-    "seg_path = f'../input/Dataset2(CRC)/seg/{sample_name}.ome.tif'\n",
+    "tif_path = f'../datasets/Dataset2(CRC)/tif/{sample_name}.ome.tif'\n",
+    "seg_path = f'../datasets/Dataset2(CRC)/seg/{sample_name}.ome.tif'\n",
     "\n",
     "# import clustered single-cell data\n",
     "data = pd.read_parquet(sc_data_path)\n",
@@ -161,10 +162,16 @@
     "        glob.glob(tif_path)[0],\n",
     "        channel=(channel_number.item() - 1)\n",
     "        )\n",
-    "\n",
+    "    \n",
+    "    if ch == 'CD8a_660':\n",
+    "        visible = True\n",
+    "    \n",
+    "    else:\n",
+    "        visible = False\n",
+    "    \n",
     "    viewer.add_image(\n",
     "        img, rgb=False, blending='additive',\n",
-    "        colormap='green', visible=False,\n",
+    "        colormap='green', visible=visible,\n",
     "        name=ch, contrast_limits=(min, max)\n",
     "        )\n",
     "\n",
@@ -172,18 +179,6 @@
     "for ch in abx_channels:\n",
     "    viewer.layers[ch].contrast_limits = (\n",
     "        contrast_limits[ch][0], contrast_limits[ch][1])\n",
-    "\n",
-    "# add centroids of cells for each cluster to Napari image viewer\n",
-    "for cluster in sorted(clusters_to_show, reverse=True):\n",
-    "    centroids = data[\n",
-    "        ['Y_centroid', 'X_centroid']][data[cluster_col] == cluster]\n",
-    "    viewer.add_points(\n",
-    "        centroids, name=f'cluster{cluster}',\n",
-    "        face_color='white',\n",
-    "        edge_color='white',\n",
-    "        edge_width=0.0, size=4.0,\n",
-    "        visible=False\n",
-    "        )\n",
     "\n",
     "# read segmentation outlines\n",
     "seg, min, max = single_channel_pyramid(\n",
@@ -195,6 +190,18 @@
     "    name='segmentation', opacity=0.3,\n",
     "    contrast_limits=(min, max)\n",
     "    )\n",
+    "\n",
+    "# add centroids of cells for each cluster to Napari image viewer\n",
+    "for cluster in sorted(clusters_to_show, reverse=True):\n",
+    "    centroids = data[\n",
+    "        ['Y_centroid', 'X_centroid']][data[cluster_col] == cluster]\n",
+    "    viewer.add_points(\n",
+    "        centroids, name=f'cluster{cluster}',\n",
+    "        face_color='white',\n",
+    "        edge_color='white',\n",
+    "        edge_width=0.0, size=4.0,\n",
+    "        visible=True\n",
+    "        )\n",
     "\n",
     "viewer.scale_bar.visible = True\n",
     "viewer.scale_bar.unit = 'um'\n",
@@ -220,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
