--- a/src/SupFig2a,g.ipynb
+++ b/src/SupFig2a,g.ipynb
@@ -8,12 +8,12 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.gridspec as grid_spec\n",
-    "\n",
-    "import seaborn as sns"
+    "import matplotlib.gridspec as grid_spec"
    ]
   },
   {
@@ -28,11 +28,11 @@
     "    os.makedirs(out_dir)\n",
     "\n",
     "# paths to datasets\n",
-    "sardana_raw = '../input/Dataset2(CRC)/CRC-097_raw_cylinter_clustering.parquet'\n",
-    "sardana_clean = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_clustering.parquet'\n",
+    "sardana_raw = '../datasets/Dataset2(CRC)/CRC-097_cylinter_raw_clustering.parquet'\n",
+    "sardana_clean = '../datasets/Dataset2(CRC)/CRC-097_cylinter_cleaned_clustering.parquet'\n",
     "\n",
-    "topacio_raw = '../input/Dataset1(TOPACIO)/TOPACIO_raw_cylinter_clustering.parquet'\n",
-    "topacio_clean = '../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_clustering.parquet'\n",
+    "topacio_raw = '../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_raw_clustering.parquet'\n",
+    "topacio_clean = '../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_cleaned_clustering.parquet'\n",
     "\n",
     "paths = {\n",
     "    'CRC_raw': sardana_raw, 'CRC_clean': sardana_clean,\n",
@@ -187,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
