--- a/src/SupTable1.ipynb
+++ b/src/SupTable1.ipynb
@@ -8,9 +8,12 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import numpy as np\n",
-    "from tifffile import imread\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from tifffile import imread\n",
     "from ome_types import from_tiff"
    ]
   },
@@ -29,13 +32,13 @@
     "paths = {\n",
     "    'topacio70':('/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/840047_0070.ome.tif', 1000),\n",
     "    'topacio128':('/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/840153_0128.ome.tif', 600),\n",
-    "    'sardana':('../input/Dataset2(CRC)/tif/WD-76845-097.ome.tif', 1000),\n",
-    "    'LI_codex1':('../input/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', 200),\n",
-    "    'LI_codex2':('../input/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', 100),\n",
-    "    'HNSCC_codex1':('../input/Dataset4(CODEX4)/tif/sample_1.ome.tif', 200),\n",
-    "    'HNSCC_codex2':('../input/Dataset4(CODEX4)/tif/sample_2.ome.tif', 1300),\n",
-    "    'emit':('../input/Dataset3(TMA)/tif/1.ome.tif', 200),\n",
-    "    'mihc': ('../input/Dataset5(mIHC)/tif/sample_1.ome.tif', 30),\n",
+    "    'sardana':('../datasets/Dataset2(CRC)/tif/WD-76845-097.ome.tif', 1000),\n",
+    "    'LI_codex1':('../datasets/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', 200),\n",
+    "    'LI_codex2':('../datasets/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', 100),\n",
+    "    'HNSCC_codex1':('../datasets/Dataset4(CODEX4)/tif/sample_1.ome.tif', 200),\n",
+    "    'HNSCC_codex2':('../datasets/Dataset4(CODEX4)/tif/sample_2.ome.tif', 1300),\n",
+    "    'emit':('../datasets/Dataset3(TMA)/tif/1.ome.tif', 200),\n",
+    "    'mihc': ('../datasets/Dataset5(mIHC)/tif/sample_1.ome.tif', 30),\n",
     "}"
    ]
   },
@@ -247,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
