--- a/src/TOPACIOmetadataStats.ipynb
+++ b/src/TOPACIOmetadataStats.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta = pd.read_csv('../input/Dataset1(TOPACIO)/metadata.csv')\n",
+    "meta = pd.read_csv('../datasets/Dataset1(TOPACIO)/metadata.csv')\n",
     "meta['Subject'] = [i.split('_')[1].lstrip('0') for i in meta['Subject']]\n",
     "\n",
     "meta = meta[meta['Subject'].isin(biopsy_method.keys())].copy()\n",
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counts = pd.read_csv('../input/Dataset1(TOPACIO)/counts.csv')\n",
+    "counts = pd.read_csv('../datasets/Dataset1(TOPACIO)/counts.csv')\n",
     "counts['sample'] = counts['sample'].astype('str')\n",
     "counts.rename(columns={'sample': 'Subject'}, inplace=True)\n",
     "counts = counts[['Subject', 'tile_count']]"
@@ -197,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
