--- a/src/TOPACIOredactStats.ipynb
+++ b/src/TOPACIOredactStats.ipynb
@@ -42,13 +42,13 @@
    "source": [
     "# read raw and clean TOPACIO data to isolate redacted cells\n",
     "df_raw = pd.read_parquet(\n",
-    "    '../input/Dataset1(TOPACIO)/TOPACIO_raw_cylinter_aggregateData.parquet'\n",
+    "    '../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_raw_aggregateData.parquet'\n",
     ")\n",
     "df_raw['Subject'] = [i.split('_')[1].lstrip('0') for i in df_raw['Sample']]\n",
     "df_raw['unique_id'] = df_raw['CellID'].astype('str') + '_' + df_raw['Subject']\n",
     "\n",
     "df_clean = pd.read_parquet(\n",
-    "    '../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_clustering.parquet'\n",
+    "    '../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_cleaned_clustering.parquet'\n",
     ")\n",
     "df_clean['Subject'] = [i.split('_')[1].lstrip('0') for i in df_clean['Sample']]\n",
     "df_clean['unique_id'] = df_clean['CellID'].astype('str') + '_' + df_clean['Subject']\n",
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# format metadata\n",
-    "meta = pd.read_csv('../input/Dataset1(TOPACIO)/metadata.csv')\n",
+    "meta = pd.read_csv('../datasets/Dataset1(TOPACIO)/metadata.csv')\n",
     "meta['Subject'] = [i.split('_')[1].lstrip('0') for i in meta['Subject']]\n",
     "\n",
     "meta = meta[meta['Subject'].isin(biopsy_method.keys())].copy()\n",
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
