--- a/src/Fig1a,b.ipynb
+++ b/src/Fig1a,b.ipynb
@@ -107,10 +107,10 @@
     "    os.makedirs(out_dir)\n",
     "\n",
     "# read aggregate csv data\n",
-    "agg = pd.read_parquet('../input/Dataset6(CODEX6)/CODEX6_clean_cylinter_aggregateData.parquet')\n",
+    "agg = pd.read_parquet('../datasets/Dataset6(CODEX6)/CODEX6_cylinter_cleaned_aggregateData.parquet')\n",
     "\n",
     "# read markers.csv\n",
-    "markers = pd.read_csv('../input/Dataset6(CODEX6)/markers.csv')\n",
+    "markers = pd.read_csv('../datasets/Dataset6(CODEX6)/markers.csv')\n",
     "\n",
     "# log-transform columns to be used in clustering\n",
     "clustering_cols = [\n",
@@ -139,11 +139,11 @@
     "data_crop['Y_centroid'] = data_crop['Y_centroid'] - row_min\n",
     "\n",
     "# read segmentation outlines and crop\n",
-    "seg = imread('../input/Dataset6(CODEX6)/seg/HBM946.GRVG.379.ome.tif', key=0)\n",
+    "seg = imread('../datasets/Dataset6(CODEX6)/seg/HBM946.GRVG.379.ome.tif', key=0)\n",
     "seg_crop = seg[row_min:row_max, col_min:col_max]\n",
     "\n",
     "# read DNA1 image, crop, and convert to RGB\n",
-    "dna = imread('../input/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', key=0)\n",
+    "dna = imread('../datasets/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', key=0)\n",
     "dna_float = img_as_float(dna)\n",
     "dna_float -= dna_float.min()\n",
     "dna_float /= dna_float.max()\n",
@@ -151,7 +151,7 @@
     "dna_crop_rgb = gray2rgb(dna_crop)\n",
     "\n",
     "# read SOX9 channel of image, crop, and convert to RGB with colormap\n",
-    "sox9_raw = imread('../input/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', key=6)\n",
+    "sox9_raw = imread('../datasets/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', key=6)\n",
     "sox9 = np.clip(sox9_raw, sox9_raw.min(), 9411)  # clipping to preferred intensity\n",
     "sox9_float = img_as_float(sox9)\n",
     "sox9_float -= sox9_float.min()\n",
@@ -228,9 +228,9 @@
     ")\n",
     "\n",
     "# read saved polygon vertices (if ROIs have been drawn already) \n",
-    "if os.path.exists(os.path.join(out_dir, 'rois.yml')):\n",
+    "if os.path.exists('../rois/Fig1a,b.yml'):\n",
     "\n",
-    "    polygon_dict = yaml.safe_load(open(os.path.join(out_dir, 'rois.yml')))\n",
+    "    polygon_dict = yaml.safe_load(open('../rois/Fig1a,b.yml'))\n",
     "        \n",
     "    shapes = [polygon_dict[i][0] for i in range(0, len(polygon_dict.keys()))]\n",
     "    polygons = [polygon_dict[i][1] for i in range(0, len(polygon_dict.keys()))]\n",
@@ -259,14 +259,25 @@
     "for e, (shape_type, roi) in enumerate(\n",
     "        zip(selection_layer.shape_type, selection_layer.data)):\n",
     "    polygon_dict[e] = [shape_type, roi.tolist()]\n",
-    "\n",
-    "f = open(os.path.join(out_dir, 'rois.yml'), 'w')\n",
+    "f = open('../rois/Fig1a,b.yml', 'w')\n",
     "yaml.dump(polygon_dict, f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "c2359950-e99d-426b-8861-73af2f3bae86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re-read newly saved polygon dict\n",
+    "if os.path.exists('../rois/Fig1a,b.yml'):\n",
+    "    polygon_dict = yaml.safe_load(open('../rois/Fig1a,b.yml'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "93fbf160-bbe8-49e0-9773-35eda8ca5802",
    "metadata": {},
    "outputs": [],
@@ -310,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "989fe154-1a4e-457d-88b1-04114e5d4f7a",
    "metadata": {},
    "outputs": [
@@ -370,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f8fd21b8-e4c1-44d9-bb4a-8e13d527e04d",
    "metadata": {},
    "outputs": [
@@ -434,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7ece24ab-7141-43c0-ad31-34f16ee78b57",
    "metadata": {},
    "outputs": [
@@ -515,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6b2852dc-3326-41d2-9e8a-a67851b1b9ff",
    "metadata": {},
    "outputs": [
@@ -579,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
