--- a/src/Fig1c.ipynb
+++ b/src/Fig1c.ipynb
@@ -8,26 +8,28 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pickle\n",
+    "import yaml\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "import math\n",
     "from natsort import natsorted\n",
     "\n",
+    "from matplotlib import colors\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.path import Path\n",
     "import matplotlib.ticker as ticker\n",
     "import matplotlib.patches as patches\n",
-    "from matplotlib.path import Path\n",
-    "from matplotlib import colors\n",
     "from matplotlib.colors import ListedColormap\n",
     "\n",
     "from PIL import Image, ImageDraw\n",
     "\n",
     "from tifffile import imread\n",
     "\n",
-    "from umap import UMAP\n",
     "import hdbscan\n",
+    "from umap import UMAP\n",
+    "\n",
     "from joblib import Memory\n",
     "\n",
     "import napari\n",
@@ -39,16 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "523e8298",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# INITIALLY RUN THIS SCRIPT IN IPYTHON TO UPDATE ROI SELECTIONS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "d020f1cc-8c13-46ad-a2de-cb19d3725866",
    "metadata": {},
    "outputs": [],
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ab3606aa",
    "metadata": {},
    "outputs": [],
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ffbb31c3-ca08-42e0-ac7b-6919a23233fd",
    "metadata": {},
    "outputs": [],
@@ -129,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b04a6c3e",
    "metadata": {},
    "outputs": [],
@@ -142,23 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e4265bf1-9f52-4a51-b01a-9adcc335b9a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# read unfiltered EMIT dataset\n",
-    "data = pd.read_parquet('../input/Dataset3(TMA)/TMA_clean_cylinter_aggregateData.parquet')\n",
+    "data = pd.read_parquet('../datasets/Dataset3(TMA)/TMA_cylinter_cleaned_aggregateData.parquet')\n",
     "\n",
     "# isolate data from target core\n",
     "core_data = data[data['Sample'] == core].copy()\n",
     "\n",
     "# read markers.csv\n",
-    "markers = pd.read_csv('../input/Dataset3(TMA)/markers.csv')\n",
-    "#'/Volumes/My Book/cylinter_input/emit22_full/markers.csv')\n",
+    "markers = pd.read_csv('../datasets/Dataset3(TMA)/markers.csv')\n",
     "\n",
     "# isolate immunomarker channels\n",
     "include = [i for i in core_data.columns if 'DNA' not in i if i in list(markers['marker_name'])]\n",
+    "\n",
     "# log-transform antibody expression data\n",
     "transformed_data = np.log10(core_data[include] + 0.00001)\n",
     "core_data.update(transformed_data)"
@@ -166,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a5c91fb6-0c3f-47fd-8249-dba3dda59650",
    "metadata": {},
    "outputs": [
@@ -206,21 +198,18 @@
     "data_crop['Y_centroid'] = data_crop['Y_centroid']-row_min\n",
     "\n",
     "# read segmentation outlines of target core and crop to target size\n",
-    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
-    "# seg = imread(f'/Volumes/My Book/cylinter_input/emit22_full/seg/{core}.ome.tif', key=0)\n",
+    "seg = imread(f'../datasets/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
     "seg_crop = seg[row_min:row_max, col_min:col_max].copy()\n",
     "\n",
     "# read DNA1 image of target core and crop to target size\n",
-    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
-    "# dna = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=0)\n",
+    "dna = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
     "dna_float = img_as_float(dna)\n",
     "dna_float = (dna_float - np.min(dna_float)) / (np.max(dna_float) - np.min(dna_float))  # normalize 0-1\n",
     "dna_crop = dna_float[row_min:row_max, col_min:col_max].copy()\n",
     "dna_crop_rgb = gray2rgb(dna_crop)\n",
     "\n",
     "# read CD63 image of target core and crop to target size\n",
-    "cd63 = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=18)\n",
-    "# cd63 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=18)\n",
+    "cd63 = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=18)\n",
     "cd63_float = img_as_float(cd63)\n",
     "cd63_float = (cd63_float - np.min(cd63_float)) / (np.max(cd63_float) - np.min(cd63_float))  # normalize 0-1\n",
     "cd63_crop = cd63_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -241,12 +230,9 @@
     "plt.grid(False)\n",
     "plt.savefig(os.path.join(out_dir, 'raster.png'), dpi=600)\n",
     "\n",
-    "# plt.colorbar(format=ticker.FuncFormatter(fmt))\n",
     "cbar = plt.colorbar()\n",
     "cbar.set_alpha(1.0)\n",
     "cbar.set_label('CD63 signal per pixel', labelpad=20, rotation=270)\n",
-    "# plt.title(f'Core {core}')\n",
-    "# cbar.draw_all()\n",
     "plt.savefig(os.path.join(out_dir, 'vector.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
@@ -254,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ca0d2cc9-8088-47c0-bd29-ed10f9582379",
    "metadata": {},
    "outputs": [
@@ -287,16 +273,13 @@
     "top_cutoff = 0.1\n",
     "cd63_crop = np.clip(cd63_crop, bottom_cutoff, top_cutoff)\n",
     "cd63_crop = (cd63_crop - np.min(cd63_crop)) / (np.max(cd63_crop) - np.min(cd63_crop))  \n",
-    "# cd63_crop_rgb = gray2rgb(cd63_crop)\n",
-    "# cd63_crop_rgb *= (0.973, 0.678, 0.125)\n",
     "cd63_crop_rgb = plt.cm.magma(cd63_crop) # converts to RGBA automatically\n",
     "cd63_crop_rgb = cd63_crop_rgb[:, :, 0:3]  # drop alpha dimension\n",
     "\n",
     "dna_crop_rgb += cd63_crop_rgb\n",
     "\n",
     "# read Ki67 image of target core and crop to target size\n",
-    "ki67 = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=9)\n",
-    "# ki67 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=9)\n",
+    "ki67 = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=9)\n",
     "ki67_float = img_as_float(ki67)\n",
     "ki67_float = (ki67_float - np.min(ki67_float)) / (np.max(ki67_float) - np.min(ki67_float))  # normalize 0-1\n",
     "ki67_crop = ki67_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -310,8 +293,7 @@
     "dna_crop_rgb += ki67_crop_rgb\n",
     "\n",
     "# read pan-CK image of target core and crop to target size\n",
-    "panck = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=10)\n",
-    "# panck = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=10)\n",
+    "panck = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=10)\n",
     "panck_float = img_as_float(panck)\n",
     "panck_float = (panck_float - np.min(panck_float)) / (np.max(panck_float) - np.min(panck_float))  # normalize 0-1\n",
     "panck_crop = panck_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -325,8 +307,7 @@
     "dna_crop_rgb += panck_crop_rgb\n",
     "\n",
     "# read aSMA image of target core and crop to target size\n",
-    "sma = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=14)\n",
-    "# sma = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=14)\n",
+    "sma = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=14)\n",
     "sma_float = img_as_float(sma)\n",
     "sma_float = (sma_float - np.min(sma_float)) / (np.max(sma_float) - np.min(sma_float))  # normalize 0-1\n",
     "sma_crop = sma_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -335,14 +316,12 @@
     "sma_crop = np.clip(sma_crop, bottom_cutoff, top_cutoff)\n",
     "sma_crop = (sma_crop - np.min(sma_crop)) / (np.max(sma_crop) - np.min(sma_crop))  \n",
     "sma_crop_rgb = gray2rgb(sma_crop)\n",
-    "# sma_crop_rgb *= (0.580, 0.125, 0.580)  # BOP purple\n",
     "sma_crop_rgb *= (0.973, 0.678, 0.125)  # BOP orange\n",
     "\n",
     "dna_crop_rgb += sma_crop_rgb\n",
     "\n",
     "# read CD32 image of target core and crop to target size\n",
-    "cd32 = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=19)\n",
-    "# cd32 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=19)\n",
+    "cd32 = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=19)\n",
     "cd32_float = img_as_float(cd32)\n",
     "cd32_float = (cd32_float - np.min(cd32_float)) / (np.max(cd32_float) - np.min(cd32_float))  # normalize 0-1\n",
     "cd32_crop = cd32_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -366,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "532d236a-0882-4626-838c-f00feabf8217",
    "metadata": {},
    "outputs": [],
@@ -386,9 +365,10 @@
     "    name='CD63'\n",
     "    )\n",
     "\n",
-    "if os.path.exists(os.path.join(out_dir, f'polygon_dict_{core}.pkl')):\n",
-    "    f = open(os.path.join(out_dir, f'polygon_dict_{core}.pkl'), 'rb')\n",
-    "    polygon_dict = pickle.load(f)\n",
+    "if os.path.exists('../rois/Fig1c.yml'):\n",
+    "\n",
+    "    polygon_dict = yaml.safe_load(open('../rois/Fig1c.yml'))\n",
+    "\n",
     "    shapes = [polygon_dict[i][0] for\n",
     "              i in range(0, len(polygon_dict.keys()))]\n",
     "    polygons = [polygon_dict[i][1] for\n",
@@ -400,7 +380,7 @@
     "        ndim=2,\n",
     "        face_color=[0.0, 1.0, 0.0, 0.0],  # [1.0, 1.0, 1.0, 0.2]\n",
     "        edge_color=[0.0, 1.0, 0.0, 1.0], # [0.0, 0.66, 1.0, 1.0]\n",
-    "        edge_width=5.0,\n",
+    "        edge_width=20.0,\n",
     "        name='ROI(s)')\n",
     "else:\n",
     "    selection_layer = viewer.add_shapes(\n",
@@ -410,13 +390,24 @@
     "\n",
     "napari.run()\n",
     "\n",
-    "polygon_dict = dict(zip([i for i in range(len(selection_layer.shape_type))],\n",
-    "                  [i for i in zip(selection_layer.shape_type, selection_layer.data)])\n",
-    "              )\n",
-    "\n",
-    "f = open(os.path.join(out_dir, f'polygon_dict_{core}.pkl'), 'wb')\n",
-    "pickle.dump(polygon_dict, f)\n",
-    "f.close()"
+    "# store ROIs\n",
+    "for e, (shape_type, roi) in enumerate(\n",
+    "        zip(selection_layer.shape_type, selection_layer.data)):\n",
+    "    polygon_dict[e] = [shape_type, roi.tolist()]\n",
+    "f = open('../rois/Fig1c.yml', 'w')\n",
+    "yaml.dump(polygon_dict, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6dd1f080-3d7a-44b8-8ec5-00c6d0122f8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re-read newly saved polygon dict\n",
+    "if os.path.exists('../rois/Fig1c.yml'):\n",
+    "    polygon_dict = yaml.safe_load(open('../rois/Fig1c.yml'))"
    ]
   },
   {
@@ -664,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
