--- a/src/Fig1h.ipynb
+++ b/src/Fig1h.ipynb
@@ -8,9 +8,12 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import numpy as np\n",
-    "from tifffile import imread\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from tifffile import imread"
    ]
   },
   {
@@ -25,7 +28,7 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "im = imread('../input/Dataset4(CODEX4)/tif/sample_1.ome.tif', key=3)\n",
+    "im = imread('../datasets/Dataset4(CODEX4)/tif/sample_1.ome.tif', key=3)\n",
     "im = im[(im != 0).any(1)][:, (im != 0).any(0)]"
    ]
   },
@@ -124,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
