--- a/src/Fig1l.ipynb
+++ b/src/Fig1l.ipynb
@@ -8,8 +8,11 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import pandas as pd\n",
+    "\n",
     "import napari\n",
+    "\n",
     "from tifffile import imread"
    ]
   },
@@ -31,19 +34,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = pd.read_csv('../input/Dataset3(TMA)/markers.csv')\n",
+    "markers = pd.read_csv('../datasets/Dataset3(TMA)/markers.csv')\n",
     "\n",
     "# read DNA1 channel\n",
-    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
+    "dna = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
     "\n",
     "pcreb_channel_number = markers['channel_number'][markers['marker_name'] == 'pCREB']\n",
     "pcreb = imread(\n",
-    "    f'../input/Dataset3(TMA)/tif/{core}.ome.tif',\n",
+    "    f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif',\n",
     "    key=pcreb_channel_number.item() - 1\n",
     "    )\n",
     "\n",
     "# read segmentation outlines\n",
-    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
+    "seg = imread(f'../datasets/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
     "\n",
     "viewer = napari.view_image(dna, rgb=False, name=dna1)\n",
     "\n",
@@ -79,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
