--- a/src/Fig1n,o.ipynb
+++ b/src/Fig1n,o.ipynb
@@ -8,14 +8,21 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "from natsort import natsorted\n",
-    "import seaborn as sns\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from natsort import natsorted\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from tifffile import imread\n",
-    "from umap import UMAP\n",
+    "\n",
     "import hdbscan\n",
+    "from umap import UMAP\n",
+    "\n",
     "from joblib import Memory\n",
     "from matplotlib.lines import Line2D"
    ]
@@ -34,7 +41,7 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "markers = pd.read_csv('../input/Dataset3(TMA)/markers.csv')\n",
+    "markers = pd.read_csv('../datasets/Dataset3(TMA)/markers.csv')\n",
     "\n",
     "aoi = [\n",
     "    i for i in list(markers['marker_name']) if not\n",
@@ -43,7 +50,7 @@
     "        ]\n",
     "\n",
     "# read unfiltered EMIT TMA22 single-cell data\n",
-    "data = pd.read_parquet('../input/Dataset3(TMA)/TMA_clean_cylinter_aggregateData.parquet')\n",
+    "data = pd.read_parquet('../datasets/Dataset3(TMA)/TMA_cylinter_cleaned_aggregateData.parquet')\n",
     "core_data = data[data['Sample'] == core]\n",
     "\n",
     "# isolate 'Sample' and Hoechst channel columns\n",
@@ -168,7 +175,7 @@
     "for e, dna in enumerate([0, 4, 8, 12, 16, 20, 24, 28, 32, 36]):\n",
     "\n",
     "    # read dna image for current cycle\n",
-    "    img = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=dna)\n",
+    "    img = imread(f'../datasets/Dataset3(TMA)/tif/{core}.ome.tif', key=dna)\n",
     "\n",
     "    # binarize signals\n",
     "    plt.imshow(img, cmap='Greys')\n",
@@ -502,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
