--- a/src/Fig3c.ipynb
+++ b/src/Fig3c.ipynb
@@ -8,7 +8,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -24,7 +26,7 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "df = pd.read_parquet('../input/Dataset1(TOPACIO)/TOPACIO_raw_cylinter_clustering.parquet')"
+    "df = pd.read_parquet('../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_raw_clustering.parquet')"
    ]
   },
   {
@@ -107,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
