--- a/src/Fig3i,j.ipynb
+++ b/src/Fig3i,j.ipynb
@@ -8,8 +8,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Patch"
    ]
@@ -35,7 +37,7 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "df = pd.read_csv('../input/Dataset1(TOPACIO)/counts.csv')\n",
+    "df = pd.read_csv('../datasets/Dataset1(TOPACIO)/counts.csv')\n",
     "percents = df.iloc[:, 2:].div(df['tile_count'], axis=0) * 100\n",
     "percents.index = df['sample'].astype('str')\n",
     "\n",
@@ -153,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
