--- a/src/Fig4j.ipynb
+++ b/src/Fig4j.ipynb
@@ -9,10 +9,10 @@
    "source": [
     "import os\n",
     "\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
     "import matplotlib.patches as patches\n",
@@ -59,7 +59,7 @@
     "    os.makedirs(out_dir)\n",
     "\n",
     "# read unfiltered single-cell data\n",
-    "data = pd.read_parquet('../input/Dataset2(CRC)/CRC-097_clean_cylinter_aggregateData.parquet')\n",
+    "data = pd.read_parquet('../datasets/Dataset2(CRC)/CRC-097_cylinter_cleaned_aggregateData.parquet')\n",
     "\n",
     "# crop\n",
     "ymin = 10440\n",
@@ -87,11 +87,11 @@
    ],
    "source": [
     "# read DNA1 image of selected tissue and crop to target size\n",
-    "dna = imread(f'../input/Dataset2(CRC)/tif/{tissue}.ome.tif', key=0)\n",
+    "dna = imread(f'../datasets/Dataset2(CRC)/tif/{tissue}.ome.tif', key=0)\n",
     "dna_crop = dna[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# read segmentation outlines for target tissue sample and crop ROI\n",
-    "seg = imread(f'../input/Dataset2(CRC)/seg/{tissue}.ome.tif', key=0)\n",
+    "seg = imread(f'../datasets/Dataset2(CRC)/seg/{tissue}.ome.tif', key=0)\n",
     "seg_crop = seg[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# plot histogram\n",
@@ -200,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
