--- a/src/Fig6j.ipynb
+++ b/src/Fig6j.ipynb
@@ -8,7 +8,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.font_manager as font_manager"
    ]
@@ -25,8 +27,8 @@
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)\n",
     "\n",
-    "raw = pd.read_parquet('../input/Dataset1(TOPACIO)/TOPACIO_raw_cylinter_clustering.parquet')\n",
-    "clean = pd.read_parquet('../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_clustering.parquet')\n",
+    "raw = pd.read_parquet('../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_raw_clustering.parquet')\n",
+    "clean = pd.read_parquet('../datasets/Dataset1(TOPACIO)/TOPACIO_cylinter_cleaned_clustering.parquet')\n",
     "\n",
     "clean['handle'] = clean['Sample'] + '_' + clean['CellID'].astype(str)\n",
     "\n",
@@ -103,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
